--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "date-fns": "^3.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
-    "tslib": "^2.6.3"
+    "tslib": "^2.6.3",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
